[tool.poetry]
name = "backend"
version = "0.2.4"
description = ""
authors = ["sinclairr08 <ljhjoon00@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.1"
uvicorn = "^0.30.3"
pre-commit = "^3.8.0"
pymongo = "^4.8.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
